<resources>
    <string name="app_name">Balances</string>

    <!-- Common Strings -->
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="credit">Credit</string>
    <string name="debit">Debit</string>

    <!-- Misc Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Misc Error Messages -->
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_required">Required</string>

    <!-- Balances (Main) Activity -->
    <string name="action_new_balance">New Balance</string>
    <string name="action_edit_balance">Edit Balance</string>
    <string name="action_delete_balance">Delete Balance</string>

    <string name="loading_balances">Loading Balances…</string>
    <string name="no_balances">You haven’t created any Balances yet.</string>

    <plurals name="title_delete_balance">
        <item quantity="one">Delete Balance</item>
        <item quantity="other">Delete Balances</item>
    </plurals>
    <plurals name="prompt_delete_balance">
        <item quantity="one">Are you sure you want to delete the selected Balance?</item>
        <item quantity="other">Are you sure you want to delete the selected Balances?</item>
    </plurals>

    <!-- New Balance Activity -->
    <string name="action_save_balance">Save Balance</string>

    <string name="balance_name">Balance Name</string>
    <string name="base_amount">Base Amount</string>
    <string name="warning_limits">Warning Limits</string>
    <string name="yellow_limit">Yellow Limit</string>
    <string name="red_limit">Red Limit</string>

    <string name="error_yellow_limit">Must be greater than red limit</string>

    <!-- Balance Details Activity -->
    <string name="balance_details">Balance Details</string>

    <string name="balance_amount_label">Balance:</string>
    <string name="transactions">Transactions</string>
    <string name="overview">Overview</string>
    <string name="scheduled">Scheduled</string>

    <!-- Transactions Fragment -->
    <string name="action_new_transaction">New Transaction</string>
    <string name="action_edit_transaction">Edit Transaction</string>
    <string name="action_delete_transaction">Delete Transaction</string>

    <string name="loading_transactions">Loading Transactions…</string>
    <string name="no_transactions">You haven’t created any Transactions yet.</string>

    <plurals name="title_delete_transaction">
        <item quantity="one">Delete Transaction</item>
        <item quantity="other">Delete Transactions</item>
    </plurals>
    <plurals name="prompt_delete_transaction">
        <item quantity="one">Are you sure you want to delete the selected Transaction?</item>
        <item quantity="other">Are you sure you want to delete the selected Transactions?</item>
    </plurals>

    <!-- New Transaction Activity -->
    <string name="action_save_transaction">Save Transaction</string>

    <string name="transaction_name">Transaction Name</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="other_fields">Other Fields</string>
    <string name="check_number">Check Number</string>
    <string name="notes">Notes</string>

    <!-- Categories -->
    <string name="title_categories">Categories</string>
    <string name="acc_category_actions">Category Actions</string>
    <string name="action_new_category">New Category</string>
    <string name="action_edit_category">Edit Category</string>
    <string name="action_delete_category">Delete Category</string>

    <string name="loading_categories">Loading Categories…</string>
    <string name="no_categories">You haven’t created any Categories yet.</string>

    <string name="category_name">Category Name</string>

    <string name="title_delete_category">Delete Category</string>
    <string name="prompt_delete_category">Are you sure you want to delete the selected Category?</string>

    <string name="title_cannot_delete_category">Can’t Delete Category</string>
    <plurals name="info_cannot_delete_category">
        <item quantity="one">This category can’t be deleted because it’s linked to %1$d transaction.</item>
        <item quantity="other">This category can’t be deleted because it’s linked to %1$d transactions.</item>
    </plurals>

    <!-- Settings -->
    <string name="title_settings">@string/action_settings</string>

    <string name="pref_cat_general">General</string>

    <string name="pref_cat_categories">Categories</string>
    <string name="pref_edit_categories">Edit Categories</string>

    <!-- About -->
    <string name="title_about_balances">About Balances</string>
    <string name="version_string">Version %1$s (%2$d)</string>
    <string name="acc_app_icon">Balances App Icon</string>
    <string name="acc_github_logo">GitHub Logo</string>

    <!-- Widget -->
    <string name="title_configure_widget_activity">Choose Balance</string>
    <string name="widget_name">Balance Widget</string>
    <string name="widget_no_balance">No Balance</string>
    <string name="widget_no_balance_sub">Tap to choose</string>
    <string name="acc_widget_add_trans">Add Transaction</string>
</resources>
