<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingStart="24dp"
              android:paddingEnd="24dp">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/category_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Fake Category"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
            android:id="@+id/category_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/type_debit">

        <RadioButton
                android:id="@id/type_debit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debit"/>

        <RadioButton
                android:id="@+id/type_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"/>
    </RadioGroup>
</LinearLayout>