<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.TransactionsFragment">

    <com.bkromhout.rrvl.RealmRecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            style="@style/RealmRVFastScroll"
            android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add"
            android:tint="@color/textColorPrimary"
            android:clickable="true"
            android:contentDescription="@string/action_new_transaction"
            app:layout_anchor="@id/recycler"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_behavior="com.bkromhout.balances.ui.ScrollAwareFABBehavior"/>

    <FrameLayout
            android:id="@+id/alt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/loading_transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/loading_transactions"
                android:visibility="gone"
                tools:visibility="visible"/>

        <TextView
                android:id="@+id/no_transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/no_transactions"
                android:visibility="gone"
                tools:visibility="visible"/>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
