<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bkromhout.balances.activities.NewBalanceActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/balance_name_layout"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/balance_name"
                android:hint="@string/balance_name"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/base_amount_layout"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_name_layout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/base_amount"
                android:hint="@string/base_amount"
                tools:text="0.00"
                android:inputType="number|numberDecimal"
                android:digits="0123456789.,"
                android:selectAllOnFocus="true"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:text="@string/warning_limits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:id="@+id/warning_limits_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/base_amount_layout"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/red_limit_layout"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yellow_limit_layout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/red_limit"
                android:hint="@string/red_limit"
                tools:text="25.00"
                android:inputType="number|numberDecimal"
                android:digits="0123456789.,"
                android:selectAllOnFocus="true"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_limit_layout"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/warning_limits_header">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/yellow_limit"
                android:hint="@string/yellow_limit"
                tools:text="50.00"
                android:inputType="number|numberDecimal"
                android:digits="0123456789.,"
                android:selectAllOnFocus="true"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
