<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activities.MainActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <com.bkromhout.rrvl.RealmRecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            style="@style/RealmRVFastScroll"
            android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add"
            android:tint="@color/textColorPrimary"
            android:clickable="true"
            android:contentDescription="@string/action_new_balance"
            app:layout_anchor="@id/recycler"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_behavior="com.bkromhout.balances.ui.ScrollAwareFABBehavior"/>

    <FrameLayout
            android:id="@+id/alt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

        <TextView
                android:id="@+id/loading_balances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/loading_balances"
                android:visibility="gone"
                tools:visibility="visible"/>

        <TextView
                android:id="@+id/no_balances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/no_balances"
                android:visibility="gone"
                tools:visibility="visible"/>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
